examples/errors/5_expression_not_found/definitions.tmd
group Root {}

element Window -> Root {
    width: u32,
    height: u32,
}